--- a/public/index.css
+++ b/public/index.css
@@ -17,12 +17,32 @@ body {
 	background-image: linear-gradient(to right, hsl(161deg 65% 74%), hsl(172deg 71% 63%)) !important;
 }
 
-
 svg :hover{
 	fill: #47cfc3 !important;
 }
 
+	/*close btn and modal*/
 
+.modalWrappar {
+	position: fixed;
+  width: 73vw;
+  left: 0;
+  right: 0;
+  top: 80px;
+  margin-left: 13.5vw;
+  margin-right: 4em;
+}
+
+.mxp{
+	/*padding: 29%;
+	padding-left: 82%;
+	padding-right: 82%;
+	margin-top: 4.5em;*/
+
+}
+.icon-close{
+	left: 81.5%;
+}
 
 @media (min-width: 768px) {
 	.backGee {
@@ -44,6 +64,10 @@ svg :hover{
 		display: none;
 	}
 
+	.modalWrappar {
+	right: 0%;
+	}	
+
 	.heroContent{
 		width: 45vw;
 	}
@@ -56,22 +80,44 @@ svg :hover{
 @media (min-width: 1024px) {
 	#heroSection{
 		background-position: 53vw -1.45vw;
-		height: 63.5vw;
+		height: 63.5vw !important;
 	}
 
-	/*.social-icon a img :hover{
-		color: green;
+	.modalWrappar {
+  width: auto;
+  box-shadow: none !important;
+  position: static !important;
+  /*left: 0;*/
+  /*right: 0;*/
+  /*top: 80px;*/
+  margin-left: 13.5vw;
+  margin-right: 4em;
 	}
-*/
 	.losty :hover{
 		color: #47cfc3 !important;
 	}
 
-/*	.lostyo a svg path :hover{
-		color:#68ae97 !important ;
+	.curren {
+		height: 150px;
+		width: 224px;
 	}
-*/
+
+	#Whychoose {
+			margin-top: -17.5vh !important;
+		}
+
 }
+
+	@media (min-width: 900px) {
+		#heroSection {
+			height: 44.6em;
+			background-position: 53vw -3.45vw;
+		}
+
+		#Whychoose {
+			margin-top: -41.5vh;
+		}
+	}
 
 @media (min-width:1280px) {
 	#heroSection{
